--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -13,3 +13,12 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%; */
 }
+
+html {
+  height: 100vh;
+}
+
+#root,
+body {
+  height: 100%;
+}
