--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -7,6 +7,12 @@ body {
   height: 100%;
 }
 
+@media screen and (max-width: 756px) {
+  html {
+    font-size: 12px;
+  }
+}
+
 @media screen and (max-width: 400px) {
   html {
     font-size: 12px;
